<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/date_choice_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/date_choice_img_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/date_choice_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_choice_tv_title"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date_choice_tv_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        android:text="@string/date_choice_tv_sub_title"
        android:textSize="20dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/date_choice_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/date_choice_layout_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_choice_tv_sub_title">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/date_choice_tv_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_disable"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/date_choice_tv_no"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/date_choice_tv_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_disable"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/date_choice_tv_yes"
            android:textColor="@color/black"
            android:textSize="18dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/date_choice_layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/date_choice_layout_action"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/date_choice_layout_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@drawable/bg_disable"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/date_choice_layout_end"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/date_choice_tv_start_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_choice_tv_start_title"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/date_choice_tv_start_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2022.12.29"
                />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/date_choice_layout_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="4dp"
            android:padding="16dp"
            android:background="@drawable/bg_disable"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/date_choice_layout_start"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/date_choice_tv_end_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_choice_tv_end_title"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/date_choice_tv_end_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2022.12.29"
                />




        </androidx.appcompat.widget.LinearLayoutCompat>



    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date_choice_tv_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:paddingVertical="16dp"
        android:background="@drawable/bg_disable"
        android:gravity="center"
        android:text="완료"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>