<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/base_choice_img_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/base_choice_img_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.appcompat.widget.Toolbar>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/base_choice_img_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/base_choice_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/base_choice_tv_title"
            android:textSize="28dp"
            android:textStyle="bold"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/base_choice_layout_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:orientation="vertical"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/base_choice_tv_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/base_choice_tv_domestic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp"
                android:gravity="center"
                android:background="@drawable/bg_activate"
                android:textSize="20dp"
                android:text="@string/base_choice_tv_domestic"
                android:textColor="@color/white"
                android:textStyle="bold"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/base_choice_tv_foreign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/bg_activate"
                android:paddingVertical="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/base_choice_tv_foreign"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                />


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>